fix ai recommendation